tdf#109016: Avoid to write the same pivot item member more times

It seems it's allowed to have the same member name in a pivot
table. We need to handle this in the filtering code.
Regression from:
625653c8d119e720fb93b0c9f6f50d1eb625b179

Change-Id: Ic6f4110da3d83f4bbf5284e1b772e9e31b250bf1